# SO_2022

./: CMakeLists.txt
lab6/a/set1/: l6_a_s1_1_FilterNoVocals.c  l6_a_s1_2_MyCut.c
lab6/a/set2/: l6_a_s2_1_ROT13.c
lab7/a/set1/: generate_instructions.py  l7_a_s1_1_MyCritSec3.c
so_19_5/: CMakeLists.txt  main.c
